feat: :sparkles: Consume services to add salaries and update it

--- a/Front/Banco-de-Talentos/src/app/features/talent/new-talent/new-talent.component.html
+++ b/Front/Banco-de-Talentos/src/app/features/talent/new-talent/new-talent.component.html
@@ -375,9 +375,9 @@
                   class="w-full"
                   styleClass="w-full"
                   placeholder="1000"
-                  formControlName="montoInicialRxH"
+                  formControlName="initialAmountRxH"
                   [ngClass]="{
-                    'ng-invalid ng-dirty': isValidField('montoInicialRxH')
+                    'ng-invalid ng-dirty': isValidField('initialAmountRxH')
                   }"
                 ></p-inputNumber>
               </div>
@@ -387,9 +387,9 @@
                   class="w-full"
                   styleClass="w-full"
                   placeholder="1000"
-                  formControlName="montoFinalRxH"
+                  formControlName="finalAmountRxH"
                   [ngClass]="{
-                    'ng-invalid ng-dirty': isValidField('montoFinalRxH')
+                    'ng-invalid ng-dirty': isValidField('finalAmountRxH')
                   }"
                 ></p-inputNumber>
               </div>
@@ -402,9 +402,9 @@
                   class="w-full"
                   styleClass="w-full"
                   placeholder="1000"
-                  formControlName="initialAmount"
+                  formControlName="initialAmountPlanilla"
                   [ngClass]="{
-                    'ng-invalid ng-dirty': isValidField('initialAmount')
+                    'ng-invalid ng-dirty': isValidField('initialAmountPlanilla')
                   }"
                 ></p-inputNumber>
               </div>
@@ -414,9 +414,9 @@
                   class="w-full"
                   styleClass="w-full"
                   placeholder="1000"
-                  formControlName="finalAmount"
+                  formControlName="finalAmountPlanilla"
                   [ngClass]="{
-                    'ng-invalid ng-dirty': isValidField('finalAmount')
+                    'ng-invalid ng-dirty': isValidField('finalAmountPlanilla')
                   }"
                 ></p-inputNumber>
               </div>
