--- a/Front/Banco-de-Talentos/src/app/shared/components/pers-prof-crd/pers-prof-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/pers-prof-crd/pers-prof-crd.component.html
@@ -40,7 +40,8 @@
         </span>
         <span class="text-500 text-xs sm:text-sm font-light">
           <i class="pi pi-dollar text-xs sm:text-sm text-800"></i>
-          {{ item.initialSalary }} - {{ item.finalSalary }}
+          RxH {{ item.initialSalaryRxH }} - {{ item.finalSalaryRxH }} | Planilla
+          {{ item.initialSalaryPlanilla }} - {{ item.finalSalaryPlanilla }}
         </span>
       </div>
     </div>
