feat: Add functions field to add/edit modal for work experience

--- a/Front/Banco-de-Talentos/src/app/shared/components/exp-pers-crd/exp-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/exp-pers-crd/exp-pers-crd.component.html
@@ -226,14 +226,14 @@
           class="w-full h-5rem"
           formControlName="functions"
           [ngClass]="{
-            'ng-invalid ng-dirty': isValidEditField('editJob')
+            'ng-invalid ng-dirty': isValidEditField('functions')
           }"
         ></textarea>
         <small
           id="textFunctions"
           class="hidden"
           [ngClass]="{
-            'ng-invalid ng-dirty': isValidEditField('editJob')
+            'ng-invalid ng-dirty': isValidEditField('functions')
           }"
           >Este campo debe tener como mínimo 10 caracteres.
         </small>
@@ -436,14 +436,14 @@
           class="w-full h-5rem"
           formControlName="functions"
           [ngClass]="{
-            'ng-invalid ng-dirty': isValidEditField('editJob')
+            'ng-invalid ng-dirty': isValidEditField('functions')
           }"
         ></textarea>
         <small
           id="textFunctions"
           class="hidden"
           [ngClass]="{
-            'ng-invalid ng-dirty': isValidEditField('editJob')
+            'ng-invalid ng-dirty': isValidEditField('functions')
           }"
           >Este campo debe tener como mínimo 10 caracteres.
         </small>
