--- a/Front/Banco-de-Talentos/src/app/shared/components/pers-prof-crd/pers-prof-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/pers-prof-crd/pers-prof-crd.component.html
@@ -39,8 +39,8 @@
           {{ item.location | titlecase }}
         </span>
         <span class="text-500 text-xs sm:text-sm font-light">
-          <i class="pi pi-dollar text-xs sm:text-sm text-800"></i>
-          RxH {{ item.initialSalaryRxH }} - {{ item.finalSalaryRxH }} | Planilla
+          RxH {{ item.iconCoin }} {{ item.initialSalaryRxH }} -
+          {{ item.finalSalaryRxH }} | Planilla {{ item.iconCoin }}
           {{ item.initialSalaryPlanilla }} - {{ item.finalSalaryPlanilla }}
         </span>
       </div>
