feat: :sparkles: Refactor styles for dashboard

--- a/Front/Banco-de-Talentos/src/app/shared/components/availability/availability.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/availability/availability.component.html
@@ -1,4 +1,7 @@
 <div class="flex flex-wrap border-round m-1 sm:my-2 sm:mr-2 sm:ml-4">
+  <span class="font-semibold text-sm md:text-base text-600"
+    >Disponibilidad</span
+  >
   <div class="w-12 p-1 my-1 flex align-items-center">
     <span class="text-left text-sm text-500">
       {{ availability }}
