--- a/Front/Banco-de-Talentos/src/app/shared/components/prof-pers-crd/prof-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/prof-pers-crd/prof-pers-crd.component.html
@@ -132,6 +132,10 @@
             {{ countryCity.city | titlecase }},
             {{ countryCity.country | titlecase }}
           </span>
+        </div>
+        <div
+          class="w-12 sm:w-max border-round flex align-items-center justify-content-around profile-country-salary"
+        >
           <span class="text-500 text-xs sm:text-sm font-light">
             <ng-container
               *ngIf="
