fix: Modify placeholders and user's options

--- a/Front/Banco-de-Talentos/src/app/features/talent/new-talent/new-talent.component.html
+++ b/Front/Banco-de-Talentos/src/app/features/talent/new-talent/new-talent.component.html
@@ -820,7 +820,7 @@
             <input
               id="textLinkedin"
               pInputText
-              placeholder="Nombre de la empresa"
+              placeholder="Link de LinkedIn"
               class="w-full"
               formControlName="linkedin"
               [ngClass]="{ 'ng-invalid ng-dirty': isValidField('linkedin') }"
@@ -837,7 +837,7 @@
             <input
               id="textGithub"
               pInputText
-              placeholder="Puesto en la empresa"
+              placeholder="Link de GitHub"
               class="w-full"
               formControlName="github"
               [ngClass]="{ 'ng-invalid ng-dirty': isValidField('github') }"
