feat: Implement directive to prevent empty href

--- a/Front/Banco-de-Talentos/src/app/shared/components/prof-pers-crd/prof-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/prof-pers-crd/prof-pers-crd.component.html
@@ -228,6 +228,7 @@
         class="w-12 border-round flex align-items-center justify-content-center sm:justify-content-end"
       >
         <a
+          preventEmptyHref
           class="cursor-pointer px-2"
           [href]="customTalent?.github"
           target="_blank"
@@ -237,6 +238,7 @@
           </span>
         </a>
         <a
+          preventEmptyHref
           class="cursor-pointer px-2"
           [href]="customTalent?.linkedin"
           target="_blank"
