feat: :sparkles: Change label for a recruiter and add disable select for languages in a new talent form

--- a/Front/Banco-de-Talentos/src/app/features/talent/new-talent/new-talent.component.html
+++ b/Front/Banco-de-Talentos/src/app/features/talent/new-talent/new-talent.component.html
@@ -773,6 +773,7 @@
                   'ng-invalid ng-dirty':
                     kl.get('level')?.errors && kl.get('level')?.touched
                 }"
+                [disabled]="!kl.get('language')?.value"
               ></p-dropdown>
 
               <div class="pt-4">
