feat: :sparkles: Only display content when click a talent in dashaboard view

--- a/Front/Banco-de-Talentos/src/app/features/dashboard/list/list.component.html
+++ b/Front/Banco-de-Talentos/src/app/features/dashboard/list/list.component.html
@@ -30,6 +30,7 @@
       >
         <p-scrollPanel
           [style]="{ width: '100%', height: 'calc(100vh - 190px)' }"
+          *ngIf="selId"
         >
           <shared-prof-pers-crd
             [customTalent]="customTalent"
