--- a/Front/Banco-de-Talentos/src/app/features/dashboard/list/list.component.scss
+++ b/Front/Banco-de-Talentos/src/app/features/dashboard/list/list.component.scss
@@ -77,3 +77,9 @@ $border-color: $primary-color;
       0 1px 2px 0 rgba(0, 0, 0, 0);
   }
 }
+
+.list__container {
+  display: grid;
+  grid-template-rows: 1fr 72px;
+  gap: 0.2rem;
+}
