feat: Improve scroll bar

--- a/Front/Banco-de-Talentos/src/app/features/dashboard/list/list.component.scss
+++ b/Front/Banco-de-Talentos/src/app/features/dashboard/list/list.component.scss
@@ -51,6 +51,11 @@
   .p-rating .p-rating-icon.p-rating-cancel {
     color: #ef4444;
   }
+
+  .p-scrollpanel .p-scrollpanel-bar {
+    background: none;
+    border: 0 none;
+  }
 }
 
 $primary-color: #009695;
